@@ -922,7 +922,7 @@ int JackCoreAudioDriver::SetupDevices(const char* capture_driver_uid,
             if (GetDeviceIDFromUID(capture_driver_uid, &captureID) != noErr) {
                 jack_log("Will take default input");
                 if (GetDefaultInputDevice(&captureID) != noErr) {
-                    jack_error("Cannot open default device");
+                    jack_error("Cannot open default input device");
                     return -1;
                 }
             }
@@ -930,7 +930,7 @@ int JackCoreAudioDriver::SetupDevices(const char* capture_driver_uid,
             if (GetDeviceIDFromUID(playback_driver_uid, &playbackID) != noErr) {
                 jack_log("Will take default output");
                 if (GetDefaultOutputDevice(&playbackID) != noErr) {
-                    jack_error("Cannot open default device");
+                    jack_error("Cannot open default output device");
                     return -1;
                 }
             }
@@ -945,7 +945,7 @@ int JackCoreAudioDriver::SetupDevices(const char* capture_driver_uid,
         if (GetDeviceIDFromUID(capture_driver_uid, &fDeviceID) != noErr) {
             jack_log("Will take default input");
             if (GetDefaultInputDevice(&fDeviceID) != noErr) {
-                jack_error("Cannot open default device");
+                jack_error("Cannot open default input device");
                 return -1;
             }
         }
@@ -960,7 +960,7 @@ int JackCoreAudioDriver::SetupDevices(const char* capture_driver_uid,
         if (GetDeviceIDFromUID(playback_driver_uid, &fDeviceID) != noErr) {
             jack_log("Will take default output");
             if (GetDefaultOutputDevice(&fDeviceID) != noErr) {
-                jack_error("Cannot open default device");
+                jack_error("Cannot open default output device");
                 return -1;
             }
         }
@@ -973,12 +973,29 @@ int JackCoreAudioDriver::SetupDevices(const char* capture_driver_uid,
     } else {
         jack_log("JackCoreAudioDriver::Open default driver");
         if (GetDefaultDevice(&fDeviceID) != noErr) {
-            jack_error("Cannot open default device");
-            return -1;
-        }
-        if (GetDeviceNameFromID(fDeviceID, capture_driver_name) != noErr || GetDeviceNameFromID(fDeviceID, playback_driver_name) != noErr) {
-            jack_error("Cannot get device name from device ID");
-            return -1;
+            jack_error("Cannot open default device in duplex mode, so aggregate default input and default output");
+            
+            // Creates aggregate device
+            AudioDeviceID captureID, playbackID;
+            
+            if (GetDeviceIDFromUID(capture_driver_uid, &captureID) != noErr) {
+                jack_log("Will take default input");
+                if (GetDefaultInputDevice(&captureID) != noErr) {
+                    jack_error("Cannot open default input device");
+                    return -1;
+                }
+            }
+            
+            if (GetDeviceIDFromUID(playback_driver_uid, &playbackID) != noErr) {
+                jack_log("Will take default output");
+                if (GetDefaultOutputDevice(&playbackID) != noErr) {
+                    jack_error("Cannot open default output device");
+                    return -1;
+                }
+            }
+            
+            if (CreateAggregateDevice(captureID, playbackID, samplerate, &fDeviceID) != noErr)
+                return -1;
         }
     }
     
